Reverted changes to the last commit, Fix overflowing text in cards by setting the width

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,7 +11,10 @@ body {
 
 .card {
   min-height: 150px;
-  position: relative;
+}
+
+.card-title {
+  width:90%;
 }
 
 .delete {
